-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0, 5.6.0
-
d77339875a853266cd043ae9f184a776aa7d2a6d
QQmlPlatform::os() doesn't make use of Q_OS_QNX, making it difficult to distinguish QNX from other unix-like systems. This bug is similar in principle to QTBUG-38532.
- relates to
-
QTBUG-38532 Qt.platform.os returns "windows" on WinRT and Windows Phone, not more specific values
-
- Closed
-
-
QTBUG-64000 Qt.platform.os is too restricted
-
- Closed
-
| For Gerrit Dashboard: QTBUG-52515 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 206252,5 | Return "qnx" for Qt.platform.os when appropriate | 5.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |