Return "qnx" for Qt.platform.os when appropriate

[ChangeLog][QtQml] Qt.platform.os returns "qnx" when running
on QNX platforms.

Task-number: QTBUG-52515
Change-Id: Ie46f235248f7832fff12906cf858e8527e8060b1
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>